# reu_summer_research

cacti/: Cache  cache.cfg.out  cache_analysis.txt  cache_designs.py  clean.sh  clean2.sh  commands_example.sh  data_table.txt  mock_cache.cfg  mock_cache.cfg.out  mock_cache.txt  mock_cache2.cfg  nuca.cc  nway_explore.py
cacti/N-Way-Set-Associative-L1-Cache/: Makefile  cache.trace  cacti  clean.sh  funcs.cc  io.example.txt  main.cc  nway_explore.py  output.txt  tags
cacti/N-Way-Set-Associative-L1-Cache/experiments/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  (+136 more)
cacti/data_reuse_distance/: Cargo.toml  reuse_graph.py  rust_reuse.txt
cacti/data_reuse_distance/src/: .main.rs.rustfmt  main.rs
cacti/obj_dbg/: cacti
stonne/: Makefile  clean.sh  commands_example.sh  compile_commands.json  stonne_experiments.py  stonne_to_energy.py  tags
stonne/energy_tables/: calculate_energy.py  energy_model.txt
stonne/include/: ASNetwork.h  CollectionBus.h  Component.h  Config.h  DSNetwork.h  DSwitch.h  DataPackage.h  DistributionNetwork.h  FEASwitch.h  FENetwork.h  Fifo.h  MSwitch.h  MemoryController.h  OSMeshMN.h  OSMeshSDMemory.h  ReduceNetwork.h  SDMemory.h  STONNEModel.h  Stats.h  types.h
stonne/src/: ASwitch.cpp  AccumulationBuffer.cpp  CollectionBus.cpp  Config.cpp  DSNetwork.cpp  MSNetwork.cpp  MSwitch.cpp  OSMeshSDMemory.cpp  SDMemory.cpp  STONNEModel.cpp  SparseSDMemory.cpp  main.cpp
stonne/stonne_linker_src/: stonne_linker.cpp
stonne/weekly_notes/: goals_and_quest.txt  info.txt
(+269 files in other folders)
