[package]
name = "data_reuse_distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
overflow-checks = false   
lto = "thin"



[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
regex = "1.5.6"
